--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
           </div>
         </div>
         <div class="btn-wrapper">
-          <input class="btn1" type="submit" value=">> DINNER MENU"><input class="btn2" type="submit" value=">> DRINK MENU">
+          <input onclick="location.href='https://me76210356ltkm5.github.io/ideal-machine2-2/'"class="btn1" type="submit" value=">> DINNER MENU"><input onclick="location.href='https://me76210356ltkm5.github.io/ideal-machine2-3/'"class="btn2" type="submit" value=">> DRINK MENU">
         </div>
       </div>
     </div>
